--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,16 @@
             <scope>system</scope>
             <systemPath>${pom.basedir}/external/CombatTagPlus.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
 
         <!-- NMS -->
         <dependency>
